# pico-sqlalchemy

./: .coveragerc  .gitignore  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  MANIFEST.in  Makefile  README.md  SECURITY.md  manage.sh  mkdocs.yml  pico.txt  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-to-pypi.yml  sync-keywords.yml
docs/: architecture.md  faq.md  hooks.py  index.md  llms.txt  migration.md  overview.md  quickstart.md  requirements.txt  skills.md  troubleshooting.md
docs/development/: project-tooling.md
docs/how-to/: alembic.md  multiple-databases.md  testing.md
docs/javascripts/: extra.js
docs/reference/: configuration.md  declarative-base.md  repository.md  transactions.md
examples/crud-async/: README.md  config.yml  requirements.txt
examples/crud-async/app/: main.py  models.py  repositories.py  services.py
src/pico_sqlalchemy/: __init__.py  _version.py  base.py  config.py  decorators.py  factory.py  interceptor.py  migrations.py  paging.py  repository_interceptor.py  session.py
tests/: conftest.py  test_configurer_contract.py  test_coverage_boost_v2.py  test_interceptor.py  test_ioc_integration.py  test_migrations.py  test_pagination_sort.py  test_repository_interceptor_coverage.py  test_repository_query.py  test_session_propagation.py  test_transaction_manager.py  test_transaction_scope.py
