[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-sqlalchemy"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "Pico-ioc integration for SQLAlchemy. Adds Spring-style transactional support, configuration, and helpers."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "ioc",
    "di",
    "dependency injection",
    "sqlalchemy",
    "transaction",
    "orm",
    "inversion of control",
    "asyncio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pico-ioc >= 2.2.0",
    "sqlalchemy >= 2.0",
]

[project.optional-dependencies]
async = [
    "asyncpg >= 0.29.0",
]

test = [
    "pytest >= 8",
    "pytest-asyncio >= 0.23.5",
    "pytest-cov >= 5",
]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-sqlalchemy"
Repository = "https://github.com/dperezcabrera/pico-sqlalchemy"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-sqlalchemy/issues"
Documentation = "https://dperezcabrera.github.io/pico-sqlalchemy/"
Changelog = "https://github.com/dperezcabrera/pico-sqlalchemy/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_sqlalchemy*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.2.0"
write_to = "src/pico_sqlalchemy/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project.entry-points."pico_boot.modules"]
pico_sqlalchemy = "pico_sqlalchemy"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = ["E501", "E701", "E731", "F401", "F811", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"

